<resources>
    <string name="app_name">Kelaut</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="email_address">Alamat Email</string>
    <string name="password">Kata Sandi</string>
    <string name="login">Login</string>
    <string name="forgot_password">Lupa Kata Sandi?</string>
    <string name="register_here">Belum Punya Akun? Daftar Disini</string>
    <string name="registration">Pendaftaran</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="repeat_password">Ulangi Kata Sandi</string>
    <string name="register">Daftar</string>
    <string name="return_to_login">Kembali ke Login</string>
    <string name="front_desc">Lorem ipsum dolor sik amet</string>
    <string name="no_account">Belum punya akun? Daftar di sini</string>
    <string name="already_have_account">Sudah punya akun? Login disini</string>
    <string name="lets_start">Yuk Mulai!</string>
    <string name="skip">Lewati</string>
    <string name="skip_and_shop">Lewati dan Langsung Belanja</string>
    <string name="back">Kembali</string>
    <string name="logout">Keluar</string>
    <string name="version">Version 1.0.0-SNAPSHOT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">Post</string>
    <string name="home">Beranda</string>
    <string name="favorite">Favorit</string>
    <string name="transaction">Transaksi</string>
    <string name="profile">Profil</string>
    <string name="my_account">Akun Saya</string>
    <string name="user_name">Nama User</string>
    <string name="edit_profile">Edit Profil</string>
    <string name="address">Alamat</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="setting">Pengaturan</string>
    <string name="account_name">Nama Akun</string>
    <string name="save">Simpan</string>
    <string name="cancel">Batal</string>
    <string name="ok">Oke</string>
    <string name="search_here">Mau mancing dimana?</string>
    <string name="promotion">Promosi</string>
    <string name="promotion_title">Judul Promosi</string>
    <string name="promotion_desc">Teks Promosi</string>
    <string name="menu">Menu</string>
    <string name="booking">Pesan Jasa</string>
    <string name="news">Berita</string>
    <string name="checklist">Kelengkapan melaut</string>
    <string name="give_rating">Beri Penilaian</string>
    <string name="rates">Penilaian</string>

    <string name="decided_date">Tentukan Tanggal</string>
    <string name="service_image">Gambar Jasa</string>
    <string name="book_service">Pesan Jasa</string>
    <string name="search">Cari</string>
    <string name="service_name">Nama Jasa</string>
    <string name="location">Lokasi</string>
    <string name="service_owner">Pemilik</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="default_count">1</string>

    <string name="days">Berapa Hari?</string>
    <string name="desc">Deskripsi</string>
    <string name="additional_service">Layanan Tambahan</string>
    <string name="price">Harga</string>
    <string name="price_desc">Keterangan Harga</string>
    <string name="message_to_owner">Pesan untuk Penyedia Jasa</string>
    <string name="schedule">Jadwal Operasional</string>

    <string name="default_date">01 Jan 2021</string>
    <string name="default_price">Rp 10000</string>
    <string name="no_transaction">Tidak ada transaksi</string>

    <string name="text">Text</string>

    <string-array name="transaction_progress">
        <item>Sedang Diproses</item>
        <item>Riwayat</item>
    </string-array>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>