<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--            <com.google.android.material.appbar.AppBarLayout-->
            <!--                android:id="@+id/appBarLayout"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->

            <!--                <androidx.appcompat.widget.Toolbar-->
            <!--                    android:id="@+id/toolbar"-->
            <!--                    android:layout_width="match_parent"-->
            <!--                    android:layout_height="?attr/actionBarSize"-->
            <!--                    android:background="?attr/colorPrimary"-->
            <!--                    app:layout_scrollFlags="scroll|enterAlways"-->
            <!--                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />-->
            <!--            </com.google.android.material.appbar.AppBarLayout>-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.circularreveal.CircularRevealFrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/iv_service_image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:contentDescription="@string/service_image"
                        android:scaleType="fitXY"
                        android:src="@drawable/banner" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@drawable/gradient" />

                </com.google.android.material.circularreveal.CircularRevealFrameLayout>

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/back"
                    android:src="@drawable/icon_left_arrow_wwhite" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_service_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/service_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_rates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/rates"
                app:drawableStartCompat="@drawable/ic_baseline_star_24" />

            <TextView
                android:id="@+id/tv_service_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/service_owner"
                app:drawableStartCompat="@drawable/ic_baseline_person_24" />

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/phone_number"
                app:drawableStartCompat="@drawable/ic_baseline_local_phone_24" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/location"
                app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/desc"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/front_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/additional_service"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_additional_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/front_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/schedule"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_operational_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/front_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/price"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/price" />

            <TextView
                android:id="@+id/tv_price_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/price_desc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/days"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/btn_minus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minus"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:text="@string/default_count"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plus"
                    android:textSize="20sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/message_to_owner"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/front_desc"
                app:boxStrokeColor="@color/primary">

                <EditText
                    android:id="@+id/et_message_to_owner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/message_to_owner"
                    android:background="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:hint="@string/message_to_owner"
                    android:inputType="text"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_booking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="10dp"
                android:text="@string/booking"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="15dp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminateTint="@color/primary"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>